Sécuriser le flux d’update : jeton env, signature obligatoire, obfuscation release